[package]
name = "libraw_r"
version = "1.0.0-rc.1"
edition = "2021"
license = "LGPL-2.1-or-later or CDDL-1.0"
rust-version = "1.65"
description = "High level api over libraw-sys"
repository = "https://github.com/aftershootco/libraw-sys"
homepage = "https://github.com/aftershootco/libraw-sys"
publish = ["ktra"]

[lib]
name = "libraw_r"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", optional = true }
image = { version = "0.24" , optional = true }
img-parts = { version = "0.3.0", optional = true }
libc = { version = "0.2.135", optional = true }
libraw-sys = { workspace = true }
memchr = "2.5.0"
semver = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"

[features]
jpeg = ["dep:image", "dep:img-parts"]
bindgen = ["libraw-sys/bindgen"]
exif = ["dep:libc"]
openmp = ["libraw-sys/openmp"]
openmp_static = ["libraw-sys/openmp_static"]
debug = []

default = ["exif", "debug"]

[build-dependencies]
anyhow = "1.0.58"
bindgen = "0.69.1"
cbindgen = "0.26.0"
cc = "1.0.73"

[dev-dependencies]
anyhow = "1.0.58"

[workspace]
members = [
    ".",
    "libraw-sys",
    "tests",
]
[workspace.dependencies]
libraw-sys = { path = "libraw-sys", version = "1.0.0-rc.1", registry = "ktra" }
libraw_r = { path = ".", version = "1.0.0-rc.1", registry = "ktra" }


# [profile.dev]
# opt-level = 0
# debug = true
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 256
# rpath = false

# [profile.bench]
[profile.release]
panic = "abort"
debug = true
