[workspace]
package.name = "libraw"
package.version = "1.0.0-rc.2"
resolver = "2"
members = [
    "libraw-rs",
    "libraw-sys",
    "raw-rendering",
    "tests",
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
debug = true
