[package]
name = "libraw-sys"
version = "1.0.0-rc.2"
edition = "2021"
license = "LGPL-2.1-or-later or CDDL-1.0"
build = "build.rs"
publish = []
homepage = "https://github.com/aftershootco/libraw-sys"
repository = "https://github.com/aftershootco/libraw-sys"
description = "Bindings to the c api for libraw"
include = ["/src/*.rs", "/vendor/src/**", "/vendor/internal/**", "/vendor/libraw/**", "/Cargo.toml", "/README.md", "/vendor/README.md", "/vendor/LICENSE.CDDL", "/vendor/LICENSE.LGPL", "/build.rs" ]
links = "raw_r"

[dependencies]
libc = "0.2.123"
openmp-sys = { version = "1.2.3", optional = true }

[build-dependencies]
bindgen = { version = "0.69", optional = true }
pkg-config = "0.3.26"
cc = { version = "1.0.73", features = ["parallel"]}
shellexpand = "3.0.0"
fs_extra = "1.3.0"
dunce = "1.0.3"
git2 = "0.19.0"

[features]
default = ["bindgen", "jpeg"]
bindgen = ["dep:bindgen"]
jpeg = []
copy = []
openmp = ["dep:openmp-sys"]
openmp_static = ["openmp", "openmp-sys?/static"]
